force-app/main/default/objects/leaseworks__Notifications_Subscription__c/leaseworks__Notifications_Subscription__c.object-meta.xml
<CustomObject>
    <description>This object is to store all the Notifications configured by the user. to send the Email out to the end user.</description>
    <label>Notification Subscription</label>
    <nameField>
        <displayFormat>Notify-{000000}</displayFormat>
        <label>Notification Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>