force-app/main/default/objects/leaseworks__Notifications_Subscription__c/fields/leaseworks__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Field_API_Name__c</fullName>
    <description>On-watch field that will be monitored for change or Date check</description>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>