force-app/main/default/objects/leaseworks__Notifications_Subscription__c/fields/leaseworks__Last_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Execution_Date__c</fullName>
    <label>Last Execution Date</label>
    <type>DateTime</type>
</CustomField>