force-app/main/default/objects/leaseworks__Notifications_Subscription__c/fields/leaseworks__Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Notification_Type__c</fullName>
    <description>On Date - send an email if
On Change - send an email if this field was changed (log this field and compare with previous value)
On Create - send an email if the record was created
On Delete - send an email if the record was deleted</description>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Date</fullName>
                <default>true</default>
                <label>On Date</label>
            </value>
            <value>
                <fullName>On Create</fullName>
            </value>
            <value>
                <fullName>On Change</fullName>
            </value>
            <value>
                <fullName>On Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>