force-app/main/default/objects/leaseworks__Notifications_Subscription__c/fields/leaseworks__Notify_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Notify_Days__c</fullName>
    <description>How many days before the date Field user should receive this email?</description>
    <inlineHelpText>Enter the number of days before or after the event; e.g. enter &quot;10&quot; to create a Task with a due date 10 days before/after the event.</inlineHelpText>
    <label>Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>