force-app/main/default/objects/leaseworks__Notifications_Subscription__c/fields/leaseworks__Record_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Record_Filter_Criteria__c</fullName>
    <description>Parsing text where the user can define the condition for the notification - parse field names and logic operators. (where condition)</description>
    <inlineHelpText>Use this field to restrict (&quot;filter&quot;) the records that the Notification or Task applies to. e.g. to send a Notification or to create a Task only for leases that have Active checkbox checked, write &quot;leaseworks_ _active_ _c = true&quot;. Refer to the Knowledgebase for more details.</inlineHelpText>
    <label>Record Filter Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>