force-app/main/default/objects/leaseworks__Notifications_Subscription__c/fields/leaseworks__Related_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_Object_API_Name__c</fullName>
    <label>Related Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>