force-app/main/default/objects/leaseworks__Notifications_Subscription__c/fields/leaseworks__Task_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Task_Status__c</fullName>
    <label>Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>