force-app/main/default/objects/leaseworks__Notifications_Subscription__c/recordTypes/leaseworks__Email.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Email</fullName>
    <active>true</active>
    <label>Email</label>
</RecordType>