force-app/main/default/objects/leaseworks__Notifications_Subscription__c/recordTypes/leaseworks__Task.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Task</fullName>
    <active>true</active>
    <label>Task</label>
</RecordType>