force-app/main/default/objects/leaseworks__Notifications_Subscription__c/listViews/leaseworks__Active_Notification_Subscriptions_List.listView-meta.xml
<ListView>
    <fullName>leaseworks__Active_Notification_Subscriptions_List</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Object_Name__c</columns>
    <columns>leaseworks__Field_Name__c</columns>
    <columns>leaseworks__Notification_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>leaseworks__Active__c</columns>
    <columns>leaseworks__Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>leaseworks__Status__c</field>
        <operation>equals</operation>
        <value>Running</value>
    </filters>
    <label>Active Notification Subscriptions List</label>
</ListView>