force-app/main/default/objects/leaseworks__Notifications_Subscription__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Object_Name__c</columns>
    <columns>leaseworks__Notification_Type__c</columns>
    <columns>leaseworks__Record_Filter_Criteria__c</columns>
    <columns>leaseworks__Field_Name__c</columns>
    <columns>leaseworks__Title__c</columns>
    <columns>leaseworks__Message__c</columns>
    <columns>leaseworks__Users__c</columns>
    <columns>leaseworks__Notify_Days__c</columns>
    <columns>leaseworks__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>